--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,19 +182,59 @@ target_link_libraries(dct2Test PUBLIC TBB::tbb)
 target_link_libraries(dct2Test2 PUBLIC TBB::tbb)
 target_link_libraries(dct2Test3 PUBLIC TBB::tbb)
 target_link_libraries(dct2Test4 PUBLIC TBB::tbb)
+target_link_libraries(dft2Test PUBLIC TBB::tbb)
 target_link_libraries(DiamondWheelAnalysis PUBLIC TBB::tbb)
+target_link_libraries(differenceOfGaussianTest PUBLIC TBB::tbb)
+target_link_libraries(doubleImageIOTest PUBLIC TBB::tbb)
+#target_link_libraries(dictionaryBasedNonLocalMeanTest PUBLIC TBB::tbb)
+target_link_libraries(gaussianFigure2DTest PUBLIC TBB::tbb)
+target_link_libraries(getNFromVariadicTemplatesTest PUBLIC TBB::tbb)
+target_link_libraries(highlightRegionTest PUBLIC TBB::tbb)
 target_link_libraries(histogramTest PUBLIC TBB::tbb)
+target_link_libraries(idct2Test PUBLIC TBB::tbb)
 target_link_libraries(imgaussfiltTest PUBLIC TBB::tbb)
+target_link_libraries(increaseIntensityTest PUBLIC TBB::tbb)
+target_link_libraries(isIntegerTest PUBLIC TBB::tbb)
 target_link_libraries(juliaFractalGeneratorTest PUBLIC TBB::tbb)
 target_link_libraries(lanczosResamplingTest PUBLIC TBB::tbb)
 target_link_libraries(mandelbrotFractalGeneratorTest PUBLIC TBB::tbb)
 target_link_libraries(manhattanDistanceTest PUBLIC TBB::tbb)
+target_link_libraries(meanTest PUBLIC TBB::tbb)
+target_link_libraries(multipliesParallelTest PUBLIC TBB::tbb)
+target_link_libraries(multipliesWithImageVectorsTest PUBLIC TBB::tbb)
 target_link_libraries(otsuThresholdTest PUBLIC TBB::tbb)
+target_link_libraries(paste2DTest PUBLIC TBB::tbb)
 target_link_libraries(phoenixFractalGeneratorTest PUBLIC TBB::tbb)
-target_link_libraries(rainDictionaryAnalysis PUBLIC TBB::tbb)
+target_link_libraries(plusTest PUBLIC TBB::tbb)
+target_link_libraries(powTest PUBLIC TBB::tbb)
+#target_link_libraries(powParallelTest PUBLIC TBB::tbb)
+target_link_libraries(printDbmpFileTest PUBLIC TBB::tbb)
+target_link_libraries(subimageTest PUBLIC TBB::tbb)
+target_link_libraries(subimage2Test PUBLIC TBB::tbb)
+target_link_libraries(rgb2hsvTest PUBLIC TBB::tbb)
 target_link_libraries(randFunctionTest PUBLIC TBB::tbb)
+target_link_libraries(dct3DetailTest PUBLIC TBB::tbb)
+target_link_libraries(dct3Test PUBLIC TBB::tbb)
+target_link_libraries(idct3DetailTest PUBLIC TBB::tbb)
+target_link_libraries(pixelwiseOperationTest PUBLIC TBB::tbb)
+#target_link_libraries(pixelwiseOperationParallelTest PUBLIC TBB::tbb)
+target_link_libraries(rainDictionaryAnalysis PUBLIC TBB::tbb)
+target_link_libraries(recursiveAllOfTest PUBLIC TBB::tbb)
+target_link_libraries(recursiveAnyOfTest PUBLIC TBB::tbb)
+target_link_libraries(recursiveFindIfTest PUBLIC TBB::tbb)
+target_link_libraries(recursiveFoldRightAllTest PUBLIC TBB::tbb)
+target_link_libraries(recursiveForeachTest PUBLIC TBB::tbb)
 target_link_libraries(recursiveMinmaxTest PUBLIC TBB::tbb)
+target_link_libraries(recursiveNoneOfTest PUBLIC TBB::tbb)
+target_link_libraries(recursiveReduceTest PUBLIC TBB::tbb)
+target_link_libraries(recursiveRemoveCopyTest PUBLIC TBB::tbb)
+target_link_libraries(recursiveRemoveCopyIfTest PUBLIC TBB::tbb)
+target_link_libraries(recursiveSizeTest PUBLIC TBB::tbb)
+#target_link_libraries(recursiveTransformTest PUBLIC TBB::tbb)
+#target_link_libraries(recursiveTransformReduceTest PUBLIC TBB::tbb)
 target_link_libraries(stitchingTest PUBLIC TBB::tbb)
+#target_link_libraries(sumTest PUBLIC TBB::tbb)
+target_link_libraries(transposeTest PUBLIC TBB::tbb)
 target_link_libraries(windowedFilterTest PUBLIC TBB::tbb)
 
 if(APPLE)
