--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,7 +199,7 @@ target_link_libraries(juliaFractalGeneratorTest PUBLIC TBB::tbb)
 target_link_libraries(lanczosResamplingTest PUBLIC TBB::tbb)
 target_link_libraries(mandelbrotFractalGeneratorTest PUBLIC TBB::tbb)
 target_link_libraries(manhattanDistanceTest PUBLIC TBB::tbb)
-target_link_libraries(meanTest PUBLIC TBB::tbb)
+#target_link_libraries(meanTest PUBLIC TBB::tbb)
 target_link_libraries(multipliesParallelTest PUBLIC TBB::tbb)
 target_link_libraries(multipliesWithImageVectorsTest PUBLIC TBB::tbb)
 target_link_libraries(otsuThresholdTest PUBLIC TBB::tbb)
