--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,7 @@ add_executable(recursiveSizeTest test/recursiveSizeTest.cpp image_io.cpp)
 #add_executable(recursiveTransformTest test/recursiveTransformTest.cpp image_io.cpp)
 #add_executable(recursiveTransformReduceTest test/recursiveTransformReduceTest.cpp image_io.cpp)
 add_executable(stitchingTest test/stitchingTest.cpp image_io.cpp)
+add_executable(stitchingMultipleTest test/stitchingMultipleTest.cpp image_io.cpp)
 #add_executable(sumTest test/sumTest.cpp image_io.cpp)
 add_executable(transposeTest test/transposeTest.cpp image_io.cpp)
 add_executable(windowedFilterTest test/windowedFilterTest.cpp image_io.cpp)
@@ -233,6 +234,7 @@ target_link_libraries(recursiveSizeTest PUBLIC TBB::tbb)
 #target_link_libraries(recursiveTransformTest PUBLIC TBB::tbb)
 #target_link_libraries(recursiveTransformReduceTest PUBLIC TBB::tbb)
 target_link_libraries(stitchingTest PUBLIC TBB::tbb)
+target_link_libraries(stitchingMultipleTest PUBLIC TBB::tbb)
 #target_link_libraries(sumTest PUBLIC TBB::tbb)
 target_link_libraries(transposeTest PUBLIC TBB::tbb)
 target_link_libraries(windowedFilterTest PUBLIC TBB::tbb)
