--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,6 +140,7 @@ add_executable(recursiveRemoveCopyIfTest test/recursiveRemoveCopyIfTest.cpp imag
 add_executable(recursiveSizeTest test/recursiveSizeTest.cpp image_io.cpp)
 #add_executable(recursiveTransformTest test/recursiveTransformTest.cpp image_io.cpp)
 #add_executable(recursiveTransformReduceTest test/recursiveTransformReduceTest.cpp image_io.cpp)
+add_executable(siftDrawMatches test/siftDrawMatches.cpp image_io.cpp)
 add_executable(stitchingTest test/stitchingTest.cpp image_io.cpp)
 add_executable(stitchingMultipleTest test/stitchingMultipleTest.cpp image_io.cpp)
 #add_executable(sumTest test/sumTest.cpp image_io.cpp)
@@ -233,6 +234,7 @@ target_link_libraries(recursiveRemoveCopyIfTest PUBLIC TBB::tbb)
 target_link_libraries(recursiveSizeTest PUBLIC TBB::tbb)
 #target_link_libraries(recursiveTransformTest PUBLIC TBB::tbb)
 #target_link_libraries(recursiveTransformReduceTest PUBLIC TBB::tbb)
+target_link_libraries(siftDrawMatches PUBLIC TBB::tbb)
 target_link_libraries(stitchingTest PUBLIC TBB::tbb)
 target_link_libraries(stitchingMultipleTest PUBLIC TBB::tbb)
 #target_link_libraries(sumTest PUBLIC TBB::tbb)
