--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,6 +145,7 @@ add_executable(siftDrawMatches test/siftDrawMatches.cpp image_io.cpp)
 add_executable(stitchingTest test/stitchingTest.cpp image_io.cpp)
 add_executable(stitchingMultipleTest test/stitchingMultipleTest.cpp image_io.cpp)
 #add_executable(sumTest test/sumTest.cpp image_io.cpp)
+add_executable(testingRANSAC_MSAC_HomographyEstimation test/testingRANSAC_MSAC_HomographyEstimation.cpp image_io.cpp)
 add_executable(transposeTest test/transposeTest.cpp image_io.cpp)
 add_executable(windowedFilterTest test/windowedFilterTest.cpp image_io.cpp)
 
@@ -240,6 +241,7 @@ target_link_libraries(siftDrawMatches PUBLIC TBB::tbb)
 target_link_libraries(stitchingTest PUBLIC TBB::tbb)
 target_link_libraries(stitchingMultipleTest PUBLIC TBB::tbb)
 #target_link_libraries(sumTest PUBLIC TBB::tbb)
+target_link_libraries(testingRANSAC_MSAC_HomographyEstimation PUBLIC TBB::tbb)
 target_link_libraries(transposeTest PUBLIC TBB::tbb)
 target_link_libraries(windowedFilterTest PUBLIC TBB::tbb)
 
