--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,6 +127,7 @@ add_executable(idct3DetailTest test/idct3DetailTest.cpp image_io.cpp)
 add_executable(pixelwiseOperationTest test/pixelwiseOperationTest.cpp image_io.cpp)
 #add_executable(pixelwiseOperationParallelTest test/pixelwiseOperationParallelTest.cpp image_io.cpp)
 add_executable(rainDictionaryAnalysis test/rainDictionaryAnalysis.cpp image_io.cpp)
+add_executable(RANSAC_InlierVisualizationTest test/rainDictionaryAnalysis.cpp image_io.cpp)
 add_executable(recursiveAllOfTest test/recursiveAllOfTest.cpp image_io.cpp)
 add_executable(recursiveAnyOfTest test/recursiveAnyOfTest.cpp image_io.cpp)
 add_executable(recursiveFindIfTest test/recursiveFindIfTest.cpp image_io.cpp)
@@ -223,6 +224,7 @@ target_link_libraries(idct3DetailTest PUBLIC TBB::tbb)
 target_link_libraries(pixelwiseOperationTest PUBLIC TBB::tbb)
 #target_link_libraries(pixelwiseOperationParallelTest PUBLIC TBB::tbb)
 target_link_libraries(rainDictionaryAnalysis PUBLIC TBB::tbb)
+target_link_libraries(RANSAC_InlierVisualizationTest PUBLIC TBB::tbb)
 target_link_libraries(recursiveAllOfTest PUBLIC TBB::tbb)
 target_link_libraries(recursiveAnyOfTest PUBLIC TBB::tbb)
 target_link_libraries(recursiveFindIfTest PUBLIC TBB::tbb)
