--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -10,7 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    
+
+    - name: Install Dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential cmake libopencv-dev libtbb-dev libomp-dev
+
     - name: Build Snap
       uses: snapcore/action-build@v1
       id: build
