--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -17,6 +17,7 @@ parts:
     # CMake configuration flags
     cmake-parameters:
       - -DCMAKE_BUILD_TYPE=Release
+      - -DCMAKE_CXX_FLAGS="-O3 -ffast-math -flto"
       # CUDA is disabled for the base snap build to ensure compatibility.
       # Enabling CUDA in snaps requires the 'nvidia-neon' extension or manual setup.
       - -DENABLE_CUDA=OFF
